--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/.bin/gulp build",
+    "build": "gulp",
     "dev": "gulp watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
