--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "engines": {
     "node": ">=20.x"
-},
-
+  },
   "name": "clone_disneyplus",
   "version": "1.0.0",
   "description": "",
@@ -17,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "gul": "^1.0.0",
+    "gulp": "^5.0.0",
     "gulp-cli": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
